5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1594_1801.log
== TEST (2019-03-26 17:08:03) 
-- CODE:
o=input("insira o nome do objeto:")
f=input("insira o numero de repetições:")

print(o*f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(o*f)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:08:39) 
-- CODE:
o=input("insira o nome do objeto:")
f=input("insira o numero de repetições:")

print("Abra"+o *f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Abra"+o *f)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:08:53) 
-- CODE:
o=input("insira o nome do objeto:")
f=input("insira o numero de repetições:")

print("Abra"+ o *f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Abra"+ o *f)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:09:21) 
-- CODE:
o=input("insira o nome do objeto:")
f= input("insira o numero de repetições:")

print("Abra"+ o *f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Abra"+ o *f)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:09:51) 
-- CODE:
o= input("insira o nome do objeto:")
f= input("insira o numero de repeticoes:")

print("Abra"+ o *f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Abra"+ o *f)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:10:10) 
-- CODE:
o= input("insira o nome do objeto:")
f= input("insira o numero de repeticoes:")

print("Abra"+o*f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Abra"+o*f)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:10:32) 
-- CODE:
o= input("insira o nome do objeto:")
f= input("insira o numero de repeticoes:")

print("Abra",o*f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Abra",o*f)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:10:49) 
-- CODE:
o= input("insira o nome do objeto:")
f= input("insira o numero de repeticoes:")

print("Abra",o+*f)
-- ERROR:
File "XXXX", line 4
    print("Abra",o+*f)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:10:55) 
-- CODE:
o= input("insira o nome do objeto:")
f= input("insira o numero de repeticoes:")

print("Abra",o+f)
-- OUTPUT:
Abra livro8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:11:22) 
-- CODE:
o= input("insira o nome do objeto:")
f= input("insira o numero de repeticoes:")

print("Abra",o*f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Abra",o*f)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:11:42) 
-- CODE:
o= input("insira o nome do objeto:")
f= float(input("insira o numero de repeticoes:"))

print("Abra",o*f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Abra",o*f)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:11:52) 
-- CODE:
o= input("insira o nome do objeto:")
f= int(input("insira o numero de repeticoes:"))

print("Abra",o*f)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:12:16) 
-- CODE:
o= input("insira o nome do objeto:")
f= int(input("insira o numero de repeticoes:"))

print("Abra",o* f)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:12:30) 
-- CODE:
o= input("insira o nome do objeto:")
f= int(input("insira o numero de repeticoes:"))

print("Abra",o* f)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:12:39) 
-- CODE:
o= input("insira o nome do objeto:")
f= int(input("insira o numero de repeticoes:"))

print("Abra",o* f + o)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 15:53:27) 
-- CODE:
o= input("insira o nome do objeto:")
f= int(input("insira o numero de repeticoes:"))

print("Abra",o* f + o)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 15:54:04) 
-- CODE:
o= input("insira o nome do objeto:")
f= int(input("insira o numero de repeticoes:"))

print("Abra",o* f + o * f)
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivrolivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
